--- a/index.html
+++ b/index.html
@@ -9,5 +9,22 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+        <!-- <header
+        className="Welcome-page"
+        style="
+          background-color: white;
+          height: 100vh;
+          width: 100%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        "
+      >
+
+        <img 
+        src="/kennel.png" 
+        style="
+        width:40px"
+      /> -->
   </body>
 </html>
