--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/kennel.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>kennel</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-        <!-- <header
+    <div id="root">
+  
+        <header
         className="Welcome-page"
         style="
           background-color: white;
@@ -24,7 +24,10 @@
         <img 
         src="/kennel.png" 
         style="
-        width:40px"
-      /> -->
+        width:200px"
+      />
+    </header>
+  </div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
