--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/kennel.png" />
+    <link rel="icon" type="image/svg+xml" href="/full logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>kennel</title>
   </head>
@@ -22,7 +22,7 @@
       >
 
         <img 
-        src="/kennel.png" 
+        src="/full logo.png" 
         style="
         width:200px"
       />
